--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Impact is an HTML5 Game Engine. More info & documentation: http://impactjs.com/",
   "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
     "start": "webpack-dev-server --watch --inline --colors --port 8080",
+    "startwm": "webpack-dev-server --config wm.webpack.config.js --watch --inline --colors --port 8081",
+    "build": "webpack --config webpack.config.prod.js --progress -p",
+    "buildwm": "webpack --config wm.webpack.config.prod.js --progress -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
