--- a/.drone.yml
+++ b/.drone.yml
@@ -14,9 +14,9 @@ pipeline:
     image: drailing/go_packr_zip
     commands:
       - cd weltmeister/api
-      - GOOS=linux GOARCH=amd64 packr build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-linux-amd64
-      - GOOS=darwin GOARCH=amd64 packr build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-darwin-amd64
-      - GOOS=windows GOARCH=amd64 packr build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-win-amd64.exe
+      - GOOS=linux GOARCH=amd64 packr2 build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-linux-amd64
+      - GOOS=darwin GOARCH=amd64 packr2 build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-darwin-amd64
+      - GOOS=windows GOARCH=amd64 packr2 build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-win-amd64.exe
       - mkdir release
       - zip release/${DRONE_REPO_NAME}-${DRONE_TAG}-linux-amd64.zip ${DRONE_REPO_NAME}-${DRONE_TAG}-linux-amd64
       - zip release/${DRONE_REPO_NAME}-${DRONE_TAG}-darwin-amd64.zip ${DRONE_REPO_NAME}-${DRONE_TAG}-darwin-amd64
