--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,7 @@ pipeline:
     image: drailing/go_packr_zip
     commands:
       - cd weltmeister/api
+      - go get
       - GOOS=linux GOARCH=amd64 packr2 build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-linux-amd64
       - GOOS=darwin GOARCH=amd64 packr2 build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-darwin-amd64
       - GOOS=windows GOARCH=amd64 packr2 build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-win-amd64.exe
