--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impact",
+  "name": "impact-game",
   "version": "1.0.0",
   "description": "Impact is an HTML5 Game Engine. More info & documentation: http://impactjs.com/",
   "main": "index.js",
@@ -8,6 +8,7 @@
     "startwm": "webpack-dev-server --config wm.webpack.config.js --watch --inline --colors --port 8081",
     "build": "webpack --config webpack.config.prod.js --progress -p",
     "buildwm": "webpack --config wm.webpack.config.prod.js --progress -p",
+    "buildimpact": "webpack --config webpack.config.lib.js --progress -p",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,5 +34,8 @@
     "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "impact": "file:impact"
   }
 }
