--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "impact": "file:dist/impact"
+    "impact": "file:dist/impact",
+    "weltmeister": "file:dist/weltmeister"
   }
 }
