--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,6 @@ pipeline:
   github_release:
     image: plugins/github-release
     secrets: [ github_token ]
-    files: weltmeister/api/release/*
+    files: api/release/*
     when:
       event: tag
