--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,8 @@ pipeline:
   build:
     image: drailing/go_packr_zip
     commands:
+      - go get github.com/inconshreveable/mousetrap
+      - GOOS=windows go get github.com/konsorten/go-windows-terminal-sequences
       - cd api
       - go get
       - GOOS=linux GOARCH=amd64 packr2 build -v -o ${DRONE_REPO_NAME}-${DRONE_TAG}-linux-amd64
